--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Lindow-N.github.io/PortfolioWeb",
+  "homepage": "http://lindow-n.github.io/PortfolioWeb",
   "name": "portfolioweb",
   "version": "0.1.0",
   "private": false,
